tests/NormalTests/paczka1/fuzzy1/46922248.err
Error in line 9: Om6eURq S37n 6,9
Error in line 10: Om6eURq S370 9,8
Error in line 13: Om6eURq S936 27,2
Error in line 6: ufe0kE S936 51,5
Error in line 14: Om6eURq S600 57,0
Error in line 16: Om6eURq S936 26,7
Error in line 19: S389 S600 68,9
Error in line 20: 1B0l S389 90,0
Error in line 33: ufe0kE S389 134,9
Error in line 35: fovMAVBF S389 61,9
